--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
             <p>a web developer</p>
 
         </div>
+        <div class="work" id="work">
+            <h2> These are some of my projects</h2>
+            <img src="" >
+        </div>
     </body>
 </html>
